bridge/base/0-cmsrecent-namespace.yaml
#! 0-cmsrecent-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: cmsrecent
    labels:
        com.docker.compose.project: cmsrecent
