bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: cmsrecent
    labels:
        com.docker.compose.project: cmsrecent
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: cmsrecent
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: cmsrecent
                com.docker.compose.service: backend
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: cms-backend
                  image: cmsrecent-backend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: backend-5000
                      containerPort: 5000
