bridge/base/db-deployment.yaml
#! db-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db
    namespace: cmsrecent
    labels:
        com.docker.compose.project: cmsrecent
        com.docker.compose.service: db
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: cmsrecent
            com.docker.compose.service: db
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: cmsrecent
                com.docker.compose.service: db
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: cms-postgres
                  image: postgres:15-alpine
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - pg_isready -U postgres
                    periodSeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: db-5432
                      containerPort: 5432
                  volumeMounts:
                    - name: var-lib-postgresql-data
                      mountPath: /var/lib/postgresql/data
                    - name: docker-entrypoint-initdb-d-1-schema-sql
                      mountPath: /docker-entrypoint-initdb.d/1-schema.sql
                    - name: docker-entrypoint-initdb-d-2-seeds-sql
                      mountPath: /docker-entrypoint-initdb.d/2-seeds.sql
            volumes:
                - name: var-lib-postgresql-data
                  persistentVolumeClaim:
                    claimName: db-db-data
                - name: docker-entrypoint-initdb-d-1-schema-sql
                  hostPath:
                    path: D:\script\cms_ext\Cmsrecent\server\schema.sql
                - name: docker-entrypoint-initdb-d-2-seeds-sql
                  hostPath:
                    path: D:\script\cms_ext\Cmsrecent\server\seeds.sql
